# lab-assignments

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.md
onboarding/: 02a-eda.ipynb  02b-research-infra.ipynb  03a-package-management.ipynb  03b-nn-from-scratch.ipynb  README.md
onboarding/templates/: CLAUDE.md  copilot-instructions.md
research/: dataframe-comparison.ipynb  dataset-eda.ipynb  github-issue.md  graph-data.ipynb  quarto-post.md
